# spark-dating-api

./: .gitignore  README.md  config.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/controllers/: auth.py  matchmaking.py  orientation.py  preferences.py  session.py
api/middleware/: auth.py
api/models/: db.py
api/routers/private/matchmaking/: matchmaking.py
api/routers/private/profile/: __init__.py  interests.py  orientation.py  photos.py  profile.py
api/routers/private/user/: preferences.py  user.py
api/routers/public/auth/: __init__.py
api/routers/public/profile/: gender.py  interests.py  orientation.py  profile.py
api/routers/public/user/: user.py
api/schemas/preferences/: diet.py  exercise_frequency.py  genders.py  interests.py  love_language.py  personality_type.py  political_views.py  pronouns.py  smoke_frequency.py  zodiac_signs.py
api/schemas/session/: __init__.py  mode.py
api/services/: sockets.py  storage.py  supabase.py
chat/: server.js
chat/demo-client/: index.html  index.js
controllers/: chats.py  gender.py  interests.py  matchmaking.py  preferences.py  profile.py  profile_options.py  session.py  user.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/auth/components/: NavIcons.jsx  PhoneAuthFormComponent.jsx  ProfileScreen.jsx  TitleBarComponent.jsx
frontend/src/auth/pages/: PhoneOtpPage.jsx  SignUpLanding.jsx
frontend/src/contexts/: AuthContext.jsx  SocketContext.jsx
frontend/src/layouts/: AuthedAppLayout.jsx
frontend/src/profile/pages/: ChatListPage.jsx  (+5 more)
frontend/src/routes/: AppRoutes.jsx
models/: db.py
routers/open/: __init__.py
routers/open/profile/: __init__.py  options.py  orientation.py
routers/private/: __init__.py
routers/private/matchmaking/: __init__.py  matchmaking.py  session.py
routers/private/profile/: gender.py  orientation.py  profile.py
routers/private/user/: __init__.py  chats.py
routers/public/auth/: phone.py
routers/public/profile/: photos.py
routers/public/user/: preferences.py
schemas/: chats.py  matchmaking.py  profile.py  user.py
schemas/auth/: phone.py
schemas/photos/: __init__.py  moderation_status.py
schemas/preferences/: __init__.py  attachment_style.py  drink_frequency.py  drug_use_frequency.py  languages.py  orientation.py  pets.py  relationship_goals.py  religion.py  sleep_schedule.py
schemas/session/: status.py
services/: otp.py  sockets.py  storage.py
