[project]
name = "spark-dating-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "annotated-doc==0.0.3",
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "bcrypt==5.0.0",
  "bidict==0.23.1",
  "CacheControl==0.14.4",
  "certifi==2025.10.5",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "cleo==2.1.0",
  "click==8.3.0",
  "crashtest==0.4.1",
  "cryptography==46.0.3",
  "deprecation==2.1.0",
  "distlib==0.4.0",
  "dnspython==2.8.0",
  "dulwich==0.24.10",
  "ecdsa==0.19.1",
  "email-validator==2.3.0",
  "exceptiongroup==1.3.0",
  "fastapi==0.121.0",
  "fastapi-cli==0.0.14",
  "fastapi-cloud-cli==0.3.1",
  "fastapi-socketio==0.0.10",
  "fastjsonschema==2.21.2",
  "filelock==3.20.0",
  "findpython==0.7.1",
  "greenlet==3.2.4",
  "h11==0.16.0",
  "h2==4.3.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httptools==0.7.1",
  "httpx==0.28.1",
  "hyperframe==6.1.0",
  "idna==3.11",
  "installer==0.7.0",
  "jeepney==0.9.0",
  "Jinja2==3.1.6",
  "keyring==25.7.0",
  "markdown-it-py==4.0.0",
  "MarkupSafe==3.0.3",
  "mdurl==0.1.2",
  "more-itertools==10.8.0",
  "msgpack==1.1.2",
  "multidict==6.7.0",
  "packaging==25.0",
  "pbs-installer==2025.12.2",
  "pkginfo==1.12.1.2",
  "platformdirs==4.5.1",
  "postgrest==2.24.0",
  "propcache==0.4.1",
  "psycopg2-binary==2.9.11",
  "pyasn1==0.6.1",
  "pycparser==2.23",
  "pydantic==2.12.4",
  "pydantic-settings==2.11.0",
  "pydantic_core==2.41.5",
  "Pygments==2.19.2",
  "PyJWT==2.10.1",
  "python-dotenv==1.2.1",
  "python-jose==3.5.0",
  "python-multipart==0.0.20",
  "python-socketio==5.15.0",
  "PyYAML==6.0.3",
  "RapidFuzz==3.14.3",
  "realtime==2.24.0",
  "requests==2.32.5",
  "requests-toolbelt==1.0.0",
  "rich==14.2.0",
  "rich-toolkit==0.15.1",
  "rignore==0.7.6",
  "rsa==4.9.1",
  "SecretStorage==3.5.0",
  "sentry-sdk==2.43.0",
  "shellingham==1.5.4",
  "simple-websocket==1.1.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.44",
  "starlette==0.49.3",
  "storage3==2.24.0",
  "StrEnum==0.4.15",
  "supabase==2.24.0",
  "supabase-auth==2.24.0",
  "supabase-functions==2.24.0",
  "tomlkit==0.13.3",
  "trove-classifiers==2025.12.1.14",
  "typer==0.20.0",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "urllib3==2.5.0",
  "uvicorn==0.38.0",
  "uvloop==0.22.1",
  "virtualenv==20.35.4",
  "watchfiles==1.1.1",
  "websockets==15.0.1",
  "wsproto==1.3.2",
  "yarl==1.22.0",
  "zstandard==0.25.0"
]
